load(
    "@io_bazel_rules_rust//rust:rust.bzl",
    "rust_library",
)

rust_library(
    name = "algebra_core_derive",
    visibility = ["//visibility:public"],
    crate_type = "proc-macro",
    edition = "2018",
    srcs = glob(["**/*.rs"]),
    deps = [
        "//cargo:proc_macro2",
        "//cargo:syn",
        "//cargo:quote",
    ],
)

