[workspace]

[package]
name = "zexe"
version = "0.1.0"

[dependencies]
blake2 = "= 0.8.1"
colored = "1"
criterion = "0.3.1"
csv = "1"
derivative = { version = "= 2.1.1", features = ["use_core"] }
digest = "0.8"
libc = "0.2.0"
num-bigint = { version = "= 0.2.3" }
num-traits = { version = "= 0.2.11", default-features = false }
paste = "0.1"
proc-macro2 = "= 1.0.17"
quote = "= 1.0.6"
rand = "= 0.7.3"
rand_core = "0.5"
radix_trie = "0.1"
rand_xorshift = "0.2"
rayon = "= 1.3.1"
rustc_version = "= 0.2.3"
smallvec = "1.2"
sprs = "0.7.1"
syn = {version = "= 1.0.17", features = ["full"]}
typenum = "= 1.12.0"
unroll = "= 0.1.4"

# marlin
array-init = { version = "= 0.1.1" }
itertools = { version = "= 0.8.2" }
num-integer = { version = "= 0.1.43" }

[lib]
# Mandatory (or Cargo tooling is unhappy)
path = "fake_lib.rs"

[raze]
genmode = "Remote"

# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//bzl/cargo"

# The target to generate BUILD rules for.
target = "x86_64-unknown-linux-gnu"

# without this we get "Error: Is a directory (os error 21)"
output_buildfile_suffix = "BUILD.bazel"

[raze.crates.bitflags.'1.2.1']
gen_buildrs = true
[raze.crates.byteorder.'1.3.4']
gen_buildrs = true
[raze.crates.cast.'0.2.3']
gen_buildrs = true
[raze.crates.crossbeam-epoch.'0.8.2']
gen_buildrs = true
[raze.crates.crossbeam-utils.'0.7.2']
gen_buildrs = true
[raze.crates.getrandom.'0.1.14']
gen_buildrs = true
[raze.crates.log.'0.4.8']
gen_buildrs = true
[raze.crates.maybe-uninit.'2.0.0']
gen_buildrs = true
[raze.crates.memchr.'2.3.3']
gen_buildrs = true
[raze.crates.memoffset.'0.5.4']
gen_buildrs = true
[raze.crates.ndarray.'0.13.1']
gen_buildrs = true
[raze.crates.num-bigint.'0.2.3']
gen_buildrs = true
[raze.crates.num-complex.'0.2.4']
gen_buildrs = true
[raze.crates.num-integer.'0.1.43']
gen_buildrs = true
[raze.crates.num-traits.'0.2.11']
gen_buildrs = true
[raze.crates.proc-macro2.'0.4.30']
gen_buildrs = true
[raze.crates.proc-macro2.'1.0.17']
gen_buildrs = true
[raze.crates.rayon-core.'1.7.0']
gen_buildrs = true
[raze.crates.ryu.'1.0.4']
gen_buildrs = true
[raze.crates.serde.'1.0.110']
gen_buildrs = true
[raze.crates.syn.'0.15.44']
gen_buildrs = true
[raze.crates.syn.'1.0.23']
gen_buildrs = true
[raze.crates.typenum.'1.12.0']
gen_buildrs = true
# https://github.com/google/cargo-raze/issues/138
additional_flags = ["--cfg=feature=\\\"force_unix_path_separator\\\""]
[raze.crates.wasm-bindgen.'0.2.62']
gen_buildrs = true
[raze.crates.wasm-bindgen-shared.'0.2.62']
gen_buildrs = true
[raze.crates.winapi.'0.3.8']
gen_buildrs = true
[raze.crates.winapi-i686-pc-windows-gnu.'0.4.0']
gen_buildrs = true
[raze.crates.winapi-x86_64-pc-windows-gnu.'0.4.0']
