load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "int_flag", "string_flag")
load("@bazel_skylib//lib:selects.bzl", "selects")

config_setting( name = "enable_verbose",
                flag_values = { "//:verbose": "True" })
config_setting( name = "disable_verbose",
                flag_values = { "//:verbose": "False" })
