load(
    "@obazl_rules_ocaml//ocaml:build.bzl",
    "ocaml_archive",
    "ocaml_executable",
    "ocaml_interface",
    "ocaml_module",
    "ocaml_ns_module",
)

EXEC_OPTS = []

INTF_OPTS = []

IMPL_OPTS = []

filegroup(
    name = "snarky_bn382_c",
    srcs = [":snarky_bn382.c"],
    visibility = ["//snarky-bn382:__pkg__"],
)

ocaml_module(
    name = "snarky_bn382_generated_stubs",
    impl = ":snarky_bn382_generated_stubs_ml",
    opts = IMPL_OPTS,
    visibility = ["//visibility:public"],
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:ctypes",
        "@opam//pkg:ctypes.foreign",
        "//snarky-bn382/caml:snarky_bn382_bindings"
    ],
)

filegroup(
    name = "snarky_bn382_generated_stubs_ml",
    srcs = [":snarky_bn382_generated_stubs.ml"]
)

genrule(
    name = "snarky_bn382_ctypes_stubs_srcs",
    tools = [":snarky_bn382_ctypes_stubs_exe"],
    outs = [
        "snarky_bn382.c",
        "snarky_bn382_generated_stubs.ml"
    ],
    cmd = "\n".join([
        "./$(location :snarky_bn382_ctypes_stubs_exe);",
        "cp snarky_bn382.c \"$(@D)/\"",
        "cp snarky_bn382_generated_stubs.ml \"$(@D)/\"",
    ]),
    visibility = ["//visibility:public"],
)

ocaml_executable(
    name = "snarky_bn382_ctypes_stubs_exe",
    opts = EXEC_OPTS,
    deps = [
        # do not sort (buildifier)
        # "@opam//pkg:ctypes",
        "@opam//pkg:ctypes.stubs",
        ":snarky_bn382_ctypes_stubs.cm_"
    ],
)

ocaml_module(
    name = "snarky_bn382_ctypes_stubs.cm_",
    impl = "snarky_bn382_ctypes_stubs.ml",
    opts = IMPL_OPTS,
    visibility = ["//visibility:public"],
    deps = [
        # do not sort (buildifier)
        "@opam//pkg:ctypes",
        "@opam//pkg:ctypes.foreign",
        "//snarky-bn382/caml:snarky_bn382_bindings"
    ],
)
