load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
)

IMPL_OPTS = ["-linkall"]

genrule(
    name = "snarky_bn382_ctypes_stubs_srcs",
    tools = [":snarky_bn382_ctypes_stubs.exe"],
    outs = [
        "snarky_bn382_generated_stubs.c",
        "snarky_bn382_generated_stubs.ml"
    ],
    cmd = "\n".join([
        "$(execpath :snarky_bn382_ctypes_stubs.exe);",
        "cp snarky_bn382.c \"$(RULEDIR)/snarky_bn382_generated_stubs.c\"",
        "cp snarky_bn382_generated_stubs.ml \"$(RULEDIR)/\"",
    ]),
    visibility = ["//visibility:public"],
)

ocaml_executable(
    name = "snarky_bn382_ctypes_stubs.exe",
    main = ":Snarky_bn382_ctypes_stubs"
)

ocaml_module(
    name = "Snarky_bn382_ctypes_stubs",
    src  = "snarky_bn382_ctypes_stubs.ml",
    opts = IMPL_OPTS,
    deps = ["//snarky-bn382/caml:Snarky_bn382_bindings"],
)
