## BUILD.bazel for /Users/gar/coda/gitfork/src/lib/zexe/snarky-bn382/test/dune
load(
    "@obazl_rules_ocaml//ocaml:rules.bzl",
    "ocaml_executable",
    "ocaml_module",
)

INTF_OPTS = ["-verbose"]

IMPL_OPTS = ["-verbose"]

ocaml_executable(
    name = "test",
    deps = [
        # do not sort (buildifier)
        "//snarky-bn382:snarky_bn382",
        ":Test",
    ],
    # cc_deps = {
    #     "//snarky-bn382:snarky_bn382.a": "default",
    #     "//snarky-bn382:snarky_bn382_stubs_stubs": "default"
    # }
)

ocaml_module(
    name = "Test",
    src = "test.ml",
    opts = ["-open", "Snarky_bn382"],
    deps = [
        "//snarky-bn382:snarky_bn382"
    ],
    # cc_deps = {"//snarky-bn382:snarky_bn382_a": "default"},
    visibility = ["//visibility:public"],
)

